--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,16 +1,7 @@
-# ===== MySQL Database Configuration =====
-spring.datasource.url=jdbc:mysql://localhost:3306/todolist?useSSL=false&serverTimezone=UTC
-spring.datasource.username=<your-username>
-spring.datasource.password=<your-password>
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# This property is required for Springfox (Swagger) to work with Spring Boot 2.6+
+# It reverts the path matching strategy to the one Springfox is compatible with.
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-# ===== JPA / Hibernate Configuration =====
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# ===== H2 Console (optional, disable if not using H2) =====
-spring.h2.console.enabled=false
-
-# ===== Server Port (optional, default 8080) =====
-server.port=3001
+# Ensures that Hibernate quotes all database identifiers.
+# This prevents conflicts with SQL reserved keywords (like 'user', 'order', etc.) across different database systems.
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
