--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# This property is required for Springfox (Swagger) to work with Spring Boot 2.6+
-# It reverts the path matching strategy to the one Springfox is compatible with.
+# This property is required for Springfox (Swagger) to work with Spring Boot 2.6+.
+# It reverts the path matching strategy to the one Springfox is compatible with,
+# resolving a common startup failure related to WebMvc and CORS configuration.
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # Ensures that Hibernate quotes all database identifiers.
