--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^1.11.0",
     "formik": "^2.2.5",
+    "http-proxy-middleware": "^3.0.5",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
