working backend dev

--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-
-
 # This property is required for Springfox (Swagger) to work with Spring Boot 2.6+.
 # It reverts the path matching strategy to the one Springfox is compatible with,
 # resolving a common startup failure related to WebMvc and CORS configuration.
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.profiles.active=dev
 
 # Ensures that Hibernate quotes all database identifiers.
 # This prevents conflicts with SQL reserved keywords (like 'user', 'order', etc.) across different database systems.
