--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./to-do-list
+        # This working directory is relative to the repository root where the .github folder is now located.
+        # It points to your 'to-do-list' project within the 'backend' directory.
+        working-directory: ./backend/to-do-list
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '''17'''
-        distribution: '''temurin'''
+        java-version: '17'
+        distribution: 'temurin'
         cache: maven
+        java-package: jdk
+        check-latest: false
+        server-id: github
+        server-username: GITHUB_ACTOR
+        server-password: GITHUB_TOKEN
+        overwrite-settings: true
+        job-status: success
+        token: ${{ secrets.GITHUB_TOKEN }} # Use the built-in GITHUB_TOKEN secret
+
     - name: Build with Maven
       run: mvn clean install
     - name: Test with Maven
