--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# Trigger CI
 name: Java CI/CD
 
 on:
@@ -6,30 +5,32 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+      - uses: actions/checkout@v3
 
-    - name: Build with Maven
-      working-directory: ./backend/to-do-list
-      run: mvn clean package
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Start Application
-      working-directory: ./backend/to-do-list
-      run: |
-        java -jar target/*.jar &
-        sleep 10 # Give the application time to start
+      - name: Build backend
+        working-directory: ./backend/to-do-list
+        run: mvn clean package -DskipTests
 
-    - name: Test with Maven
-      working-directory: ./backend/to-do-list
-      run: mvn -DbaseUrl=http://localhost:8080 test
+      - name: Start application
+        working-directory: ./backend/to-do-list
+        run: |
+          java -jar target/*.jar &
+          sleep 15
+
+      - name: Run API tests
+        working-directory: ./backend/to-do-list
+        run: mvn test -DbaseUrl=http://localhost:8080
