--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: todolist
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
+      # Checkout code
       - uses: actions/checkout@v3
 
+      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -35,34 +23,17 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build backend
-        working-directory: ./backend/to-do-list
-        run: mvn clean package -DskipTests
+      # Build the project
+      - name: Build project
+        run: mvn clean package
 
-      - name: Wait for MySQL
-        run: |
-          for i in {1..30}; do
-            if mysqladmin ping -h 127.0.0.1 -P 3306 --silent; then
-              echo "MySQL is up!"
-              break
-            fi
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
+      # Run tests
+      - name: Run tests
+        run: mvn test
 
-      - name: Start application
-        working-directory: ./backend/to-do-list
-        run: |
-          java -jar target/*.jar &
-          for i in {1..30}; do
-            if curl -s http://localhost:8080/actuator/health | grep UP; then
-              echo "Application is up!"
-              break
-            fi
-            echo "Waiting for app..."
-            sleep 2
-          done
-
-      - name: Run API tests
-        working-directory: ./backend/to-do-list
-        run: mvn test -DbaseUrl=http://localhost:8080
+      # Optional: Archive test reports
+      - name: Archive test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: surefire-reports
+          path: target/surefire-reports
