--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: todolist
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+      selenium:
+        image: selenium/standalone-chrome:latest
+        ports:
+          - 4444:4444
+
+    env:
+      SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/todolist
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+      SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
+
     steps:
-      # Checkout code
       - uses: actions/checkout@v3
 
-      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -23,17 +46,40 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Build the project
-      - name: Build project
-        run: mvn clean package
+      - name: Build backend
+        working-directory: ./backend/to-do-list
+        run: mvn clean package -DskipTests
 
-      # Run tests
+      - name: Wait for MySQL
+        run: |
+          for i in {1..30}; do
+            if mysqladmin ping -h 127.0.0.1 -P 3306 --silent; then
+              echo "MySQL is up!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+
+      - name: Start application
+        working-directory: ./backend/to-do-list
+        run: |
+          java -jar target/*.jar &
+          for i in {1..30}; do
+            if curl -s http://localhost:8080/actuator/health | grep UP; then
+              echo "Application is up!"
+              break
+            fi
+            echo "Waiting for app..."
+            sleep 2
+          done
+
       - name: Run tests
-        run: mvn test
+        working-directory: ./backend/to-do-list
+        run: mvn test -DbaseUrl=http://localhost:8080
 
-      # Optional: Archive test reports
       - name: Archive test results
         uses: actions/upload-artifact@v3
         with:
           name: surefire-reports
-          path: target/surefire-reports
+          path: ./backend/to-do-list/target/surefire-reports
