--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -24,7 +24,4 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and test
         working-directory: ./backend/to-do-list
-        run: mvn -B -DskipITs=true test
-      - name: Integration tests (API, Selenium)
-        working-directory: ./backend/to-do-list
-        run: mvn -B -Dheadless=true verify
+        run: mvn -B verify
