--- a/backend/to-do-list/src/main/resources/application-test.properties
+++ b/backend/to-do-list/src/main/resources/application-test.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Specify the H2 dialect for Hibernate.
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Ensures that Hibernate quotes all database identifiers.
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
