--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.profiles.active=dev
+# This file is for the main application configuration.
 
-# Ensures that Hibernate quotes all database identifiers.
-# This prevents conflicts with SQL reserved keywords (like 'user', 'order', etc.) across different database systems.
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# Enable Springfox (Swagger) for the application.
+# This can be omitted as 'true' is the default, but setting it explicitly is clear.
+springfox.documentation.enabled=true
