--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # This file is for the main application configuration.
 
-# Enable Springfox (Swagger) for the application.
-# This can be omitted as 'true' is the default, but setting it explicitly is clear.
-springfox.documentation.enabled=true
+# Set the active profile to 'dev' for local development.
+# This ensures the application connects to the local MySQL database.
+spring.profiles.active=dev
