after Security Testing

--- a/backend/to-do-list/src/main/resources/application.properties
+++ b/backend/to-do-list/src/main/resources/application.properties
@@ -3,3 +3,15 @@
 # Set the active profile to 'dev' for local development.
 # This ensures the application connects to the local MySQL database.
 spring.profiles.active=dev
+
+# ===================================================================
+# Bucket4j Rate Limiting Configuration
+# ===================================================================
+# This filter protects the sign-in endpoint from brute-force attacks by limiting
+# login attempts to 10 per minute from a single IP address.
+bucket4j.filters[0].cache-name=buckets
+bucket4j.filters[0].url=/api/auth/signin
+bucket4j.filters[0].strategy=ip
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[0].bandwidths[0].time=1
+bucket4j.filters[0].bandwidths[0].unit=minutes
