--- a/backend/to-do-list/pom.xml
+++ b/backend/to-do-list/pom.xml
@@ -46,6 +46,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
+	<!-- ✅ For Rate Limiting to prevent Brute-Force attacks (OWASP A07) -->
+	<dependency>
+		<groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
+		<artifactId>bucket4j-spring-boot-starter</artifactId>
+		<version>0.9.0</version>
+	</dependency>
+
 	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
 		<artifactId>jjwt</artifactId>
