--- a/backend/to-do-list/pom.xml
+++ b/backend/to-do-list/pom.xml
@@ -195,7 +195,7 @@
                     </execution>
                 </executions>
 			</plugin>
-			<!-- ✅ Ensure JUnit 5 tests run correctly in CI and locally -->
+			<!-- ✅ Ensure JUnit 5 tests run correctly in CI and locally.... -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
