--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           java-version: 17
           distribution: 'zulu'
 
-      # 3️⃣ Cache SonarCloud packages
+      # 3️⃣ Cache SonarQube packages
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
@@ -42,11 +42,12 @@ jobs:
 
       # 5️⃣ Build and run SonarCloud analysis
       - name: Build and analyze backend
-        working-directory: ./backend/to-do-list   # <--- Correct folder
+        working-directory: ./backend/to-do-list
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # ✅ Added for PR decoration
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}     # already correct
         run: |
           mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.projectKey=shimrin23_Quality_Assurance \
             -Dsonar.organization=shimrin23 \
-            -Dmaven.test.skip=true
+            -Dsonar.host.url=https://sonarcloud.io    # ✅ Explicit host url added
