--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,37 @@
-name: SonarQube Analysis
-
+name: SonarQube
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   build:
+    name: Build and analyze
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣ Checkout repo
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
-      # 2️⃣ Set up JDK 17
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'zulu'
-
-      # 3️⃣ Cache SonarCloud packages
+          distribution: 'zulu' # Alternative distribution options are available.
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-
-      # 4️⃣ Cache Maven packages
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
-          path: ~/.m2
+         path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('backend/to-do-list/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      # 5️⃣ Build and run SonarCloud analysis
-      - name: Build and analyze backend
-        working-directory: ./backend/to-do-list   # <--- Correct folder
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=shimrin23_Quality_Assurance \
-            -Dsonar.organization=shimrin23 \
-     	#-Dmaven.test.skip=true
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=shimrin23_Quality_Assurance
